--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,8 @@
 	helper = cache --timeout=86400
 [core]
 	excludesfile = /Users/sle/.gitignore_global
+	autocrlf = input
+        editor = vim
 [difftool "sourcetree"]
 	cmd = /Applications/kdiff3.app/Contents/MacOS/kdiff3 \"$LOCAL\" \"$REMOTE\"
 	path = 
@@ -31,8 +33,6 @@
 	# Who recently changed lines across multiple files and when they were changed
         mblamestat = "!f() { cd $GIT_PREFIX ; echo Blaming $@: ; echo '' > /tmp/out-dates.txt ; (echo $@ | xargs -n1 git blame -f -e ) | awk -- '{print $4, $3}' | sort | sed 's/(//g' | uniq -c >> /tmp/out-dates.txt ; echo '' > /tmp/out-people.txt ; (echo $@ | xargs -n1 git blame -f -e ) | awk -- '{print $3}' | sed 's/(//g' | sort | uniq -c | sort -n >> /tmp/out-people.txt ; paste /tmp/out-dates.txt /tmp/out-people.txt ; rm /tmp/out-dates.txt /tmp/out-people.txt ; }; f"
 [merge]
-	tool = kdiff3
 	prompt = false
 [diff]
-	tool = kdiff3
 	prompt = false
