--- a/vagrant-box/.gitconfig
+++ b/vagrant-box/.gitconfig
@@ -3,7 +3,7 @@
 [push]
         default = matching
 [core]
-        autocrlf = true
+        autocrlf = input
         editor = vim
 [color]
         ui = auto
