--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
 	unstage = reset HEAD --
 	co = checkout
 	cp = cherry-pick
+	del = checkout -D
 	d = d
 	logs = log --oneline --decorate
 	br = branch -v
