--- a/.gitconfig
+++ b/.gitconfig
@@ -5,8 +5,8 @@
 [diff]
     prompt = false
 [alias]
-    graph = log --all --graph --pretty=format:'%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen%cr %C(bold blue)%an%Creset' --abbrev-commit --date=relative
-    l = log --pretty=format:'%Cred%h%Creset -%C(auto)%d%Creset %s %Cgreen%cr %C(bold blue)%an%Creset' --abbrev-commit --date=relative
+    graph = log --all --graph --pretty=format:'%Cred%h%Creset%C(auto)%d%Creset %s %Cgreen%cr %C(bold blue)%an%Creset' --abbrev-commit --date=relative
+    l = log --pretty=format:'%Cred%h%Creset %s %Cgreen%cr %C(bold blue)%an%Creset' --abbrev-commit --date=relative
     blamestat = "!f() { cd $GIT_PREFIX ; echo Blaming $1: ; echo '' > /tmp/out-dates.txt ; git blame -f -e $1 | awk -- '{print $4, $3}' | sort | sed 's/(//g' | uniq -c >> /tmp/out-dates.txt ; echo '' > /tmp/out-people.txt ; git blame -f -e $1 | awk -- '{print $3}' | sed 's/(//g' | sort | uniq -c | sort -n >> /tmp/out-people.txt ; paste /tmp/out-dates.txt /tmp/out-people.txt ; rm /tmp/out-dates.txt /tmp/out-people.txt ; }; f"
     # Usage: git mblamestat [files...]
     # Who recently changed lines across multiple files and when they were changed
