Update and rename netbean-config to netbeans.conf

--- a/windows/misc/netbeans.conf
+++ b/windows/misc/netbeans.conf
@@ -1,5 +1,7 @@
 # C:\Program Files\NetBeans 8.2\etc\netbeans.conf
 
+# /mnt/c/Program Files/NetBeans 8.2/etc/netbeans.conf
+
 # Default locations of userdir and cachedir:
 # (http://wiki.netbeans.org/FaqWhatIsUserdir)
 #
